<resources>
    <string name="app_name">Unit Converter</string>
    <string name="entered_value">Value</string>
    <string name="button">CONVERT</string>
    <string name="DisplayOutput">textview</string>
    <string name="centimeter_to_meter">CENTIMETER TO METER</string>
    <string name="meter_to_centimeter">METER TO CENTIMETER</string>
    <string name="kilogram_to_gram">KILOGRAM TO GRAM</string>
    <string name="celsius_to_fahrenheit">CELSIUS TO FAHRENHEIT</string>
    <string name="fahrenheit_to_celsius">FAHRENHEIT TO CELSIUS</string>
    <string name="go_back">Go back</string>
    <string name="enter_value">Enter value</string>
    <string name="result">Result</string>

</resources>